// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Event should extract version from class name _V2 suffix 1`] = `
{
  "dto": {
    "kind": "event",
    "name": "test_event_create",
    "version": 2,
  },
}
`;

exports[`Event should stage dto metadata with custom name and version when provided as options 1`] = `
{
  "dto": {
    "kind": "event",
    "name": "my_event",
    "version": 3,
  },
}
`;

exports[`Event should stage dto metadata with custom name when provided as string 1`] = `
{
  "dto": {
    "kind": "event",
    "name": "custom_event_name",
    "version": 1,
  },
}
`;

exports[`Event should stage dto metadata with snake_case name derived from class name 1`] = `
{
  "dto": {
    "kind": "event",
    "name": "test_event_create",
    "version": 1,
  },
}
`;
